# cookiecutter-bali

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .env  .env_example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  conf.py  consts.py  main.py  mq.py  pyproject.toml  requirements.txt  requirements_dev.txt  rpc.py  tox.ini  web.py
{{cookiecutter.repo_name}}/alembic/: env.py  script.py.mako
{{cookiecutter.repo_name}}/biz/: model_biz.py
{{cookiecutter.repo_name}}/helpers/: bali_patch.py  base_mq_producer.py  base_mq_topic.py  dj_to_sqla.py  locals.py  redis_otp.py  redis_property.py
{{cookiecutter.repo_name}}/models/: __init__.py  field_tracker.py
{{cookiecutter.repo_name}}/resource/: model_resource.py
{{cookiecutter.repo_name}}/schemas/: generic_rpc.py
{{cookiecutter.repo_name}}/services/http/: urls.py
{{cookiecutter.repo_name}}/services/http/controllers/: __init__.py
{{cookiecutter.repo_name}}/services/http/controllers/v1/: __init__.py
{{cookiecutter.repo_name}}/services/mq/: base_consumer.py  consumers.py
{{cookiecutter.repo_name}}/services/rpc/: service.py  {{cookiecutter.repo_name}}.proto
{{cookiecutter.repo_name}}/tests/: __init__.py
